[package]
name = "elve"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "engine for browser games (WIP)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
